# ILI9341

./: .gitignore  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  ILI9341.cpp  ILI9341.hpp  color.cpp  color.hpp  dataPack.hpp  deInit.hpp  font.hpp  gpio.hpp  idf_component.yml  iic.cpp  iic.hpp  lineChart.hpp  main.cpp  minmax.hpp  mutex.hpp  spi.cpp  spi.hpp  strip.hpp  task.cpp  task.hpp  vector.hpp  wifi.cpp  wifi.hpp
main/LCD/: FT6X36.cpp  FT6X36.hpp  ILI9341.cpp  ILI9341.hpp  ILI9341.inl  autoLanguage.hpp  bar.hpp  clickable.cpp  clickable.hpp  color.cpp  color.hpp  drawable.hpp  element.hpp  finger.hpp  font.cpp  font.hpp  frame.hpp  iic.hpp  layar.hpp  line.hpp  noneCopyable.hpp  pixel.hpp  rectangle.hpp  spi.cpp  spi.hpp  text.hpp  utf8.hpp
main/app/: app.hpp
main/app/audio/: audio.cpp  audio.hpp  audioServer.cpp  audioServer.hpp  playList.cpp  playList.hpp
main/app/clock/: clock.cpp  clock.hpp
main/app/desktop/: desktop.cpp  desktop.hpp
main/app/explorer/: explorer.cpp  explorer.hpp  property.cpp  property.hpp
main/app/input/: colorInput.cpp  colorInput.hpp  input.cpp  input.hpp  textInput.cpp  textInput.hpp
main/app/picture/: picture.cpp  picture.hpp  yuv.hpp
main/app/server/: server.cpp  server.hpp  serverKernal.cpp  tempture.cpp  tempture.hpp
main/app/server/buildinHtml/: file.hpp  file.html
main/app/setting/: setting.cpp  setting.hpp  systemInfo.cpp  systemInfo.hpp  timeSetting.cpp  timeSetting.hpp  touchTest.cpp  touchTest.hpp  wifi.cpp  wifiSetting.cpp  wifiSetting.hpp
main/app/strip/: strip.cpp  strip.hpp
main/app/tetris/: block.cpp  block.hpp  map.cpp  map.hpp  mapBase.hpp  tetris.cpp  tetris.hpp
main/app/textEditor/: textEditor.cpp  textEditor.hpp
main/app/touch/: touch.cpp  touch.hpp
main/app/tracker/: tracker.cpp  tracker.hpp
main/audio/: aac.hpp  alc.hpp  audio.hpp  audioBuffer.hpp  decoder.hpp  iis.hpp  mp3.hpp  test.inl
main/storge/: fat.cpp  fat.hpp  mem.cpp  sd.cpp  sd.hpp
main/strip/: manager.cpp  manager.hpp  snapshot.hpp  strip.hpp
main/wifi/: http.hpp  mdns.cpp  mdns.hpp  socketStream.hpp  socketStreamWindow.hpp  wifi.cpp  wifi.hpp
reserces/server/: index.html
reserces/server/audio/: audio.html  audio.js
reserces/server/server/: server.html
reserces/show/: A.pic  B.pic
reserces/system/: chinese.font
x86FontArranger/: gbk.hpp  main.cpp  utf8.hpp
x86Tracker/: main.cpp  socketStream.cpp  socketStream.hpp
x86pictureTransformer/: color.hpp  files  main.cpp  yuv.hpp
